# YOLOX

./: README.md  pyproject.toml  setup.py
yolox/: __init__.py
