[project]
name = "yolox"
dynamic = ["version"]
description = "YOLOX: Exceeding YOLO series in 2021"
readme = "README.md"
requires-python = ">=3.11"

license = { text = "Apache-2.0" }

authors = [
  { name = "megvii basedet team" },
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    "loguru>=0.7.3",
    "ninja>=1.13.0",
    "numpy>=2.3.5",
    "onnx>=1.17.0",
    "onnxsim>=0.4.36,<1.0.0",
    "opencv-python>=4.11.0.86",
    "psutil>=7.1.3",
    "pycocotools>=2.0.2",
    "tabulate>=0.9.0",
    "tensorboard>=2.20.0",
    "thop>=0.1.1.post2209072238",
    "tqdm>=4.67.1",
]

# Note: PyTorch (torch and torchvision) should be installed separately
# before installing YOLOX, as users need to choose the appropriate version
# for their hardware (CUDA/CPU). See README.md for installation instructions.

[project.urls]
Homepage = "https://github.com/Megvii-BaseDetection/YOLOX"
Documentation = "https://yolox.readthedocs.io"
Source = "https://github.com/Megvii-BaseDetection/YOLOX"
Tracker = "https://github.com/Megvii-BaseDetection/YOLOX/issues"

[build-system]
requires = ["setuptools>=61", "wheel", "torch>=2.2.1,<3.0.0", "numpy>=2.3.5"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests", "tools"]

[tool.setuptools.package-dir]
"yolox.tools" = "tools"
"yolox.exp.default" = "exps/default"

[tool.setuptools.dynamic]
version = { attr = "yolox.__version__" }

# uv-spezifischer Block – kannst du später weiter ausbauen (z.B. eigene Indizes)
[tool.uv]
# Beispiel:
# [[tool.uv.index]]
# url = "https://pypi.org/simple"
# default = true

[tool.isort]
line_length = 100
multi_line_output = 3
balanced_wrapping = true
known_standard_library = ["setuptools"]
known_third_party = ["tqdm", "loguru", "tabulate", "psutil"]
known_data_processing = ["cv2", "numpy", "scipy", "PIL", "matplotlib"]
known_datasets = ["pycocotools"]
known_deeplearning = [
    "torch", "torchvision", "caffe2", "onnx", "apex", "timm",
    "thop", "torch2trt", "tensorrt", "openvino", "onnxruntime"
]
known_myself = ["yolox"]

sections = [
    "FUTURE", "STDLIB", "THIRDPARTY", "data_processing",
    "datasets", "deeplearning", "myself", "FIRSTPARTY", "LOCALFOLDER"
]

no_lines_before = ["STDLIB", "THIRDPARTY", "datasets"]
default_section = "FIRSTPARTY"

[tool.flake8]
max-line-length = 100
max-complexity = 18
exclude = ["__init__.py"]
